@@ -18,11 +18,15 @@
 package org.apache.shardingsphere.mcp.feature.mask.tool.service;
 
 import org.apache.shardingsphere.mcp.support.database.spi.MCPFeatureQueryFacade;
+import org.apache.shardingsphere.mcp.support.database.spi.MCPMetadataQueryFacade;
 import org.apache.shardingsphere.mcp.feature.mask.MaskFeatureDefinition;
 import org.apache.shardingsphere.mcp.support.workflow.model.AlgorithmCandidate;
 import org.apache.shardingsphere.mcp.support.workflow.model.AlgorithmPropertyRequirement;
 import org.apache.shardingsphere.mcp.support.workflow.model.ClarifiedIntent;
+import org.apache.shardingsphere.mcp.support.workflow.model.RuleWorkflowFeatureData;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowContextSnapshot;
+import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowIssue;
+import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowIssueCode;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowLifecycle;
 import org.apache.shardingsphere.mcp.support.workflow.model.WorkflowRequest;
 import org.apache.shardingsphere.mcp.support.workflow.service.WorkflowPlanningSupport;
@@ -30,6 +34,8 @@ import org.apache.shardingsphere.mcp.support.workflow.service.WorkflowRuleValueU
 import org.apache.shardingsphere.mcp.support.workflow.service.WorkflowSQLUtils;
 import org.apache.shardingsphere.mcp.support.workflow.WorkflowSessionContext;
 
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -62,9 +68,6 @@ public final class MaskWorkflowPlanningService {
     
     private final MaskRuleDistSQLPlanningService ruleDistSQLPlanningService;
     
-    /**
-     * Create mask workflow planning service.
-     */
     public MaskWorkflowPlanningService() {
         planningSupport = new WorkflowPlanningSupport();
         intentResolver = new MaskWorkflowIntentResolver();
@@ -78,17 +81,19 @@ public final class MaskWorkflowPlanningService {
      * Plan mask workflow.
      *
      * @param workflowSessionContext workflow session context
+     * @param metadataQueryFacade metadata query facade
      * @param queryFacade query facade
      * @param sessionId session id
      * @param request workflow request
      * @return workflow snapshot
      */
-    public WorkflowContextSnapshot plan(final WorkflowSessionContext workflowSessionContext, final MCPFeatureQueryFacade queryFacade, final String sessionId, final WorkflowRequest request) {
+    public WorkflowContextSnapshot plan(final WorkflowSessionContext workflowSessionContext, final MCPMetadataQueryFacade metadataQueryFacade, final MCPFeatureQueryFacade queryFacade,
+                                        final String sessionId, final WorkflowRequest request) {
         WorkflowContextSnapshot result = workflowSessionContext.getOrCreate(sessionId, request.getPlanId());
         WorkflowRequest mergedRequest = prepareSnapshot(result, request);
         ClarifiedIntent clarifiedIntent = result.getClarifiedIntent();
         planningSupport.applyResolvedIntent(mergedRequest, clarifiedIntent);
-        if (!planningSupport.ensureRulePlanningContext(mergedRequest, clarifiedIntent, result)) {
+        if (!planningSupport.ensurePlanningContext(metadataQueryFacade, mergedRequest, clarifiedIntent, result)) {
             String currentStep = WorkflowLifecycle.STATUS_FAILED.equals(result.getStatus()) ? WorkflowLifecycle.STEP_FAILED : WorkflowLifecycle.STEP_CLARIFYING;
             return workflowSessionContext.persist(result, currentStep, result.getStatus());
         }
@@ -97,11 +102,14 @@ public final class MaskWorkflowPlanningService {
         if (!ensureLifecycleState(clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_FAILED, WorkflowLifecycle.STATUS_FAILED);
         }
+        if (!ensureSupportedRuleMutation(clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
+            return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_CLARIFYING, WorkflowLifecycle.STATUS_CLARIFYING);
+        }
         if (isDropWorkflow(clarifiedIntent)) {
-            planArtifacts(clarifiedIntent, mergedRequest, existingRules, result, databaseType);
+            planArtifacts(clarifiedIntent, mergedRequest, existingRules, result);
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_REVIEW, WorkflowLifecycle.STATUS_PLANNED);
         }
-        if (!planNonDrop(queryFacade, clarifiedIntent, mergedRequest, existingRules, result, databaseType)) {
+        if (!planNonDrop(queryFacade, clarifiedIntent, mergedRequest, existingRules, result)) {
             return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_CLARIFYING, WorkflowLifecycle.STATUS_CLARIFYING);
         }
         return workflowSessionContext.persist(result, WorkflowLifecycle.STEP_REVIEW, WorkflowLifecycle.STATUS_PLANNED);
@@ -119,17 +127,48 @@ public final class MaskWorkflowPlanningService {
         return planningSupport.ensureLifecycleState("Mask rule", clarifiedIntent, ruleExists, snapshot);
     }
     
+    private boolean ensureSupportedRuleMutation(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
+                                                final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
+        if (isDropWorkflow(clarifiedIntent)) {
+            return !hasRemainingRulesAfterDrop(request, maskRules, databaseType) || rejectExistingTableRuleMutation(clarifiedIntent, request, maskRules, snapshot);
+        }
+        return maskRules.isEmpty() || rejectExistingTableRuleMutation(clarifiedIntent, request, maskRules, snapshot);
+    }
+    
+    private boolean hasRemainingRulesAfterDrop(final WorkflowRequest request, final List<Map<String, Object>> maskRules, final String databaseType) {
+        return maskRules.stream().anyMatch(each -> !WorkflowSQLUtils.isSameIdentifier(databaseType, request.getColumn(), WorkflowRuleValueUtils.getRuleValue(each, "column")));
+    }
+    
+    private boolean rejectExistingTableRuleMutation(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
+                                                    final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot) {
+        snapshot.getClarifiedIntent().getClarificationMessages().add(
+                "Current Proxy DistSQL cannot automatically mutate an existing mask table rule. Recreate the mask rule manually with the complete column set during a maintenance window.");
+        snapshot.getIssues().add(new WorkflowIssue(WorkflowIssueCode.MASK_ALTER_SCOPE_LIMITED, "error", "planning-artifacts",
+                "Mask planning cannot automatically alter an existing table rule or shrink it while preserving remaining columns in V1.",
+                "Manually recreate the mask rule with the complete column set after reviewing data impact.", true,
+                Map.of("operation_type", clarifiedIntent.getOperationType(), "target_column", request.getColumn(), "existing_columns", createExistingRuleColumns(maskRules))));
+        return false;
+    }
+    
+    private List<String> createExistingRuleColumns(final List<Map<String, Object>> maskRules) {
+        List<String> result = new LinkedList<>();
+        for (Map<String, Object> each : maskRules) {
+            result.add(WorkflowRuleValueUtils.getRuleValue(each, "column"));
+        }
+        return result;
+    }
+    
     private boolean isDropWorkflow(final ClarifiedIntent clarifiedIntent) {
         return WorkflowLifecycle.OPERATION_DROP.equalsIgnoreCase(clarifiedIntent.getOperationType());
     }
     
     private boolean planNonDrop(final MCPFeatureQueryFacade queryFacade, final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
-                                final List<Map<String, Object>> existingRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
+                                final List<Map<String, Object>> existingRules, final WorkflowContextSnapshot snapshot) {
         planAlgorithms(queryFacade, clarifiedIntent, request, snapshot);
         if (!planningSupport.isReadyForArtifactPlanning(request, clarifiedIntent, snapshot, findPropertyRequirements(request), "Please use a mask algorithm visible in the current Proxy.")) {
             return false;
         }
-        planArtifacts(clarifiedIntent, request, existingRules, snapshot, databaseType);
+        planArtifacts(clarifiedIntent, request, existingRules, snapshot);
         return true;
     }
     
@@ -138,7 +177,7 @@ public final class MaskWorkflowPlanningService {
         List<AlgorithmCandidate> algorithmCandidates = algorithmRecommendationService.recommendMaskAlgorithms(clarifiedIntent, request, maskAlgorithms, snapshot.getIssues());
         snapshot.getAlgorithmCandidates().addAll(algorithmCandidates);
         if (!algorithmCandidates.isEmpty()) {
-            request.setAlgorithmType(algorithmCandidates.get(0).getAlgorithmType());
+            request.setAlgorithmType(algorithmCandidates.getFirst().getAlgorithmType());
         }
     }
     
@@ -147,9 +186,18 @@ public final class MaskWorkflowPlanningService {
     }
     
     private void planArtifacts(final ClarifiedIntent clarifiedIntent, final WorkflowRequest request,
-                               final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot, final String databaseType) {
+                               final List<Map<String, Object>> maskRules, final WorkflowContextSnapshot snapshot) {
         snapshot.getRuleArtifacts().add(isDropWorkflow(clarifiedIntent)
-                ? ruleDistSQLPlanningService.planMaskDropRule(request, maskRules, databaseType)
-                : ruleDistSQLPlanningService.planMaskRule(request, maskRules, databaseType));
+                ? ruleDistSQLPlanningService.planMaskDropRule(request)
+                : ruleDistSQLPlanningService.planMaskRule(request));
+        snapshot.setFeatureData(new RuleWorkflowFeatureData(maskRules, isDropWorkflow(clarifiedIntent) ? List.of() : List.of(createExpectedTargetRule(request))));
+    }
+    
+    private Map<String, Object> createExpectedTargetRule(final WorkflowRequest request) {
+        Map<String, Object> result = new LinkedHashMap<>(3, 1F);
+        result.put("column", request.getColumn());
+        result.put("algorithm_type", request.getAlgorithmType());
+        result.put("algorithm_props", request.getPrimaryAlgorithmProperties());
+        return result;
     }
 }
