@@ -59,7 +59,7 @@ class WorkflowPlanningSupportTest {
         assertFalse(actual);
         assertThat(snapshot.getStatus(), is("clarifying"));
         assertThat(clarifiedIntent.getClarificationMessages(), is(List.of("Please provide logical database first.")));
-        assertThat(snapshot.getIssues().get(0).getCode(), is(WorkflowIssueCode.DATABASE_REQUIRED));
+        assertThat(snapshot.getIssues().getFirst().getCode(), is(WorkflowIssueCode.DATABASE_REQUIRED));
     }
     
     @Test
@@ -72,35 +72,7 @@ class WorkflowPlanningSupportTest {
         assertFalse(actual);
         assertThat(snapshot.getStatus(), is("clarifying"));
         assertThat(clarifiedIntent.getClarificationMessages(), is(List.of("Please provide logical database first.")));
-        assertThat(snapshot.getIssues().get(0).getCode(), is(WorkflowIssueCode.DATABASE_REQUIRED));
-    }
-    
-    @Test
-    void assertEnsureRulePlanningContextDoesNotReadMetadata() {
-        ClarifiedIntent clarifiedIntent = new ClarifiedIntent();
-        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
-        WorkflowRequest request = new WorkflowRequest();
-        request.setDatabase("logic_db");
-        request.setTable("orders");
-        request.setColumn("phone");
-        boolean actual = planningSupport.ensureRulePlanningContext(request, clarifiedIntent, snapshot);
-        assertTrue(actual);
-        assertTrue(clarifiedIntent.getClarificationMessages().isEmpty());
-        assertTrue(snapshot.getIssues().isEmpty());
-    }
-    
-    @Test
-    void assertEnsureRulePlanningContextRejectsMissingTableAndColumn() {
-        ClarifiedIntent clarifiedIntent = new ClarifiedIntent();
-        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
-        WorkflowRequest request = new WorkflowRequest();
-        request.setDatabase("logic_db");
-        boolean actual = planningSupport.ensureRulePlanningContext(request, clarifiedIntent, snapshot);
-        assertFalse(actual);
-        assertThat(snapshot.getStatus(), is("clarifying"));
-        assertThat(clarifiedIntent.getClarificationMessages(), is(List.of("Please specify target table.", "Please specify target column.")));
-        assertThat(snapshot.getIssues().get(0).getCode(), is(WorkflowIssueCode.TABLE_REQUIRED));
-        assertThat(snapshot.getIssues().get(1).getCode(), is(WorkflowIssueCode.COLUMN_REQUIRED));
+        assertThat(snapshot.getIssues().getFirst().getCode(), is(WorkflowIssueCode.DATABASE_REQUIRED));
     }
     
     @Test
@@ -114,7 +86,7 @@ class WorkflowPlanningSupportTest {
         boolean actual = planningSupport.ensurePlanningContext(mock(MCPMetadataQueryFacade.class), request, clarifiedIntent, snapshot);
         assertFalse(actual);
         assertThat(snapshot.getStatus(), is("failed"));
-        assertThat(snapshot.getIssues().get(0).getCode(), is(WorkflowIssueCode.UNSUPPORTED_IDENTIFIER));
+        assertThat(snapshot.getIssues().getFirst().getCode(), is(WorkflowIssueCode.UNSUPPORTED_IDENTIFIER));
     }
     
     @Test
@@ -247,13 +219,31 @@ class WorkflowPlanningSupportTest {
         WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
         snapshot.setPlanId("plan-1");
         WorkflowRequest request = new WorkflowRequest();
-        request.setExecutionMode("");
+        request.setExecutionMode("review-then-execute");
         request.setNaturalLanguageIntent("export reviewable artifacts for manual execution outside MCP");
         ClarifiedIntent clarifiedIntent = new ClarifiedIntent();
         planningSupport.prepareSnapshot(snapshot, WorkflowKind.valueOf("mask.rule"), request, null, clarifiedIntent, "summary", List.of("step-1"), List.of("rules"));
         assertThat(snapshot.getInteractionPlan().getExecutionMode(), is("manual-only"));
         assertThat(snapshot.getRequest().getExecutionMode(), is("manual-only"));
         assertThat(clarifiedIntent.getInferredValues().get("execution_mode"), is("manual-only"));
+    }
+    
+    @Test
+    void assertEnsureOptionalSupportedIdentifiersAllowsEmptyIdentifier() {
+        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
+        boolean actual = planningSupport.ensureOptionalSupportedIdentifiers("rule", List.of(""), snapshot, "intaking");
+        assertTrue(actual);
+        assertTrue(snapshot.getIssues().isEmpty());
+    }
+    
+    @Test
+    void assertEnsureSupportedIdentifiersRejectsUnsupportedIdentifier() {
+        WorkflowContextSnapshot snapshot = new WorkflowContextSnapshot();
+        boolean actual = planningSupport.ensureSupportedIdentifiers("", List.of("orders\ndrop"), snapshot, "intaking");
+        assertFalse(actual);
+        assertThat(snapshot.getIssues().getFirst().getMessage(), is("Identifier `orders\ndrop` contains unsupported characters."));
+        assertThat(snapshot.getIssues().getFirst().getUserAction(), is("Use reviewable logical identifiers without NUL or line terminators."));
+        assertThat(snapshot.getIssues().getFirst().getDetails(), is(Map.of("identifier", "orders\ndrop")));
     }
     
     @ParameterizedTest(name = "{0}")
@@ -266,7 +256,7 @@ class WorkflowPlanningSupportTest {
         assertThat(actual, is(expectedResult));
         assertThat(snapshot.getIssues().isEmpty(), is(null == expectedIssueCode));
         if (null != expectedIssueCode) {
-            assertThat(snapshot.getIssues().get(0).getCode(), is(expectedIssueCode));
+            assertThat(snapshot.getIssues().getFirst().getCode(), is(expectedIssueCode));
         }
     }
     
@@ -293,7 +283,7 @@ class WorkflowPlanningSupportTest {
         assertThat(request.getPrimaryAlgorithmProperties().get("mask-char"), is("*"));
         assertThat(clarifiedIntent.getClarificationMessages(), is(List.of("Please provide property `from-x`.")));
         assertThat(snapshot.getPropertyRequirements().size(), is(2));
-        assertThat(snapshot.getIssues().get(0).getCode(), is(WorkflowIssueCode.REQUIRED_PROPERTY_MISSING));
+        assertThat(snapshot.getIssues().getFirst().getCode(), is(WorkflowIssueCode.REQUIRED_PROPERTY_MISSING));
     }
     
     private static Stream<Arguments> getEnsureLifecycleStateCases() {
